app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */

 @font-face {
   font-family: "NorseBold";
   src: url("Norsebold.otf") format("opentype");
   font-weight: bold;
 }

 body {
    background-color: lightgrey;
    margin: 0;
    display: flex;
    flex-direction: column;
    overflow: hidden;
 }

 #top-bar {
    background-color: purple;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 10%;
    z-index: 1000;
    padding: 5px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
 }

 #main-content {
   position: absolute;
   top: 10%;
   left: 0;
   right: 0;
   bottom: 0;
   overflow-y: auto;
 }

 .user-profile {
   background-color: grey;
   padding: 10px;
   display: flex;
   align-items: center;
   gap: 10px;
   border-radius: 15px;
   justify-self: start;
   text-decoration: none;
 }

 .home-link {
   color: white;
   text-decoration: none;
   text-align: center;
   justify-self: center;
   font-family: "NorseBold";
   font-size: 4rem;
 }

 .logout-button {
   display: flex;
   justify-self: end;
 }

 .user-profile:hover {
   background-color: lightgrey;
 }

 .profile-header {
   display: flex;
   flex-direction: column;
   align-items: center;
 }

 #posts, #comments, .user-post, .user-comment {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    overflow: auto;
    padding: 30px;
 }

 .post, .comment {
    background-color: white;
    width: 60%;
    box-shadow: 0px 0px 25px 5px grey;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 25px;
    padding: 10px;
 }

 .comment {
    width: 40%;
 }

 #user-index {
   display: flex;
   flex-direction: column;
   align-items: center;
 }

 .user {
   background-color: white;
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 15px;
   border-radius: 15px;
   box-shadow: 0px 0px 15px 5px grey;
 }

 .user-info {
   display: flex;
   flex-direction: column;
   align-items: center;
 }

 .post .post-info {
    display: flex;
    gap: 15px;
    align-items: center;
 }

  .post .post-info .button_to {
    display: flex;
    height: 1.5rem;
 }

 #new_post {
    display: flex;
    flex-direction: column;
    position: fixed;
    left: 5px;
    background-color: white;
    padding: 20px;
    border-radius: 25px;
    align-items: center;
 }

  #new_comment {
    display: flex;
    flex-direction: column;
    background-color: white;
    padding: 20px;
    border-radius: 25px;
    align-items: center;
    width: 20%;
 }

 #comments-header {
    display: flex;
    flex-direction: column;
    align-items: center;
 }

